--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
         </main>
     </div>
 
-                <!-- 📊 SECCIÓN DE REPORTES (oculta inicialmente) -->
+    <!-- 📊 SECCIÓN DE REPORTES-->
     <div id="reportesScreen" class="screen">
         <!-- HEADER -->
         <header class="header">
